--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<ul class="nav navbar-nav nav-center">
 						<li class="active"><a href="#">Home</span></a></li>
 						<li><a href="#">News</a></li>
-						<li><a href="#">TEDxUHASSELT 2016</a></li>
+						<li><a href="#">TEDxHASSELT 2016</a></li>
 						<li><a href="#">Partners</a></li>
 						<li><a href="#">Events</a></li>
 						<li><a href="#">About</a></li>
